# dclt-it-management-aiops

./: .gitignore  README.md  bootstrap.py
aula02-ml-pipeline-mlflow/: ml_pipeline.py
aula03-infra-terraform/: main.tf  terraform.tfvars.example
aula06-mcp-tools/: mcp_server.py
lesson01-aiops-anomaly-detection/: LESSON_SCRIPT.md  README.md  anomaly_detection.py  pyproject.toml
lesson01-aiops-anomaly-detection/docs/: README.md
lesson02-ml-pipeline-mlflow/: .env.example  LESSON_SCRIPT.md  README.md  experiment_review_agent.py  foundry_helper.py  ml_pipeline.py  pyproject.toml
lesson02-ml-pipeline-mlflow/docs/: README.md
lesson02-ml-pipeline-mlflow/new-artifacts/: metrics.json  model.pkl  model_card.md
lesson03-infra-terraform/: .env.example  LESSON_SCRIPT.md  README.md  foundry_helper.py  main.tf  plan_review_agent.py  pyproject.toml  terraform.tfvars.example
lesson03-infra-terraform/docs/: README.md
lesson04-model-validation/: .env.example  LESSON_SCRIPT.md  README.md  foundry_helper.py  model_validation.py  promotion_review_agent.py  pyproject.toml
lesson04-model-validation/docs/: README.md
lesson05-orchestration-airflow/: .env.example  Dockerfile.airflow  LESSON_SCRIPT.md  README.md  canary_observer_agent.py  docker-compose.yml  evaluate.py  foundry_helper.py  fraud_pipeline_dag.py  monitor.py  preprocess.py  pyproject.toml  requirements-airflow.txt  requirements.txt
lesson05-orchestration-airflow/docs/: README.md
lesson05-orchestration-airflow/k8s/: canary-deploy.yaml
lesson05-orchestration-airflow/scripts/: deploy_canary.py  full_rollout.py  ingest_transactions.py  train_fraud_model.py
lesson06-mcp-tools/: .env.example  LESSON_SCRIPT.md  README.md  foundry_helper.py  mcp_agent_client.py  mcp_server.py  pyproject.toml  tool_definition.json  tool_execute_playbook.json  tool_plan_remediation.json  tool_service_status.json
lesson06-mcp-tools/docs/: README.md
lesson07-cicd-ml-pipeline/: .env.example  LESSON_SCRIPT.md  README.md  pyproject.toml  requirements-ml.txt
lesson07-cicd-ml-pipeline/.github/workflows/: ml-pipeline.yml
lesson07-cicd-ml-pipeline/docs/: README.md
lesson07-cicd-ml-pipeline/infra/: main.tf
lesson07-cicd-ml-pipeline/src/: bias_check.py  common.py  deploy.py  evaluate.py  foundry_release_gate.py  register_model.py  train.py
lesson07-cicd-ml-pipeline/tests/integration/: test_pipeline_contract.py
lesson08-aiops-practice/: .env.example  LESSON_SCRIPT.md  README.md  agent_pipeline_common.py  agentic_evaluation_gate.py  agentic_remediation_pipeline.py  anomaly_remediation.py  playbooks.json  pyproject.toml  stochastic_evaluation.py
lesson08-aiops-practice/.github/workflows/: agentic-remediation-pipeline.yml
lesson08-aiops-practice/docs/: README.md
