[project]
name = "lesson03-infra-terraform"
version = "0.1.0"
description = "Lesson 03 Terraform plan review agent."
requires-python = ">=3.13,<3.14"
dependencies = [
    "agent-framework-azure-ai==1.0.0rc3",
    "agent-framework-core==1.0.0rc3",
    "azure-identity",
    "python-dotenv",
]

[tool.uv]
package = false
