[project]
name = "lesson08-aiops-practice"
version = "0.1.0"
description = "Lesson 08 agentic remediation mini-application."
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy",
    "agent-framework-azure-ai==1.0.0rc3",
    "agent-framework-core==1.0.0rc3",
    "azure-identity",
    "python-dotenv",
]

[tool.uv]
package = false